tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:8 -------------------------------------
12 |    x = q           // error
   |        ^
   |        Found:    (q : () => Unit)
   |        Required: () ->{p, q²} Unit
   |
   |        Note that capability `q` cannot flow into capture set {p, q²}.
   |
   |        where:    => refers to a root capability in the type of parameter q
   |                  q  is a parameter in method inner
   |                  q² is a parameter in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () ->{any} Unit
   |         Required: () ->{p, q} Unit
   |
   |         Note that capability `any` cannot flow into capture set {p, q}.
   |
   |         where:    any is a root capability created in method inner
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:14:9 -------------------------------------
14 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () ->{any} Unit
   |         Required: () ->{p} Unit
   |
   |         Note that capability `any` cannot flow into capture set {p} of variable y.
   |
   |         where:    any is a root capability created in method inner
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:15:8 -------------------------------------
15 |    y = q           // error, was OK under unsealed
   |        ^
   |        Found:    (q : () => Unit)
   |        Required: () ->{p} Unit
   |
   |        Note that capability `q` cannot flow into capture set {p} of variable y.
   |
   |        where:    => refers to a root capability in the type of parameter q
   |
   | longer explanation available when compiling with `-explain`
